--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FoodFourMood</string>
     <string name="textview">TextView</string>
     <string name="button">Button</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
